; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kvm/extr_44x_tlb.c_kvmppc_44x_tlb_load.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kvm/extr_44x_tlb.c_kvmppc_44x_tlb_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { i32 }
%struct.kvmppc_vcpu_44x = type { %struct.kvmppc_44x_tlbe* }
%struct.kvmppc_44x_tlbe = type { i32 }

@tlb_44x_hwater = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kvmppc_44x_tlb_load(%struct.kvm_vcpu* %0) #0 {
  %2 = alloca %struct.kvm_vcpu*, align 8
  %3 = alloca %struct.kvmppc_vcpu_44x*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.kvmppc_44x_tlbe*, align 8
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %2, align 8
  %6 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %2, align 8
  %7 = call %struct.kvmppc_vcpu_44x* @to_44x(%struct.kvm_vcpu* %6)
  store %struct.kvmppc_vcpu_44x* %7, %struct.kvmppc_vcpu_44x** %3, align 8
  store i32 0, i32* %4, align 4
  br label %8

8:                                                ; preds = %31, %1
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @tlb_44x_hwater, align 4
  %11 = icmp sle i32 %9, %10
  br i1 %11, label %12, label %34

12:                                               ; preds = %8
  %13 = load %struct.kvmppc_vcpu_44x*, %struct.kvmppc_vcpu_44x** %3, align 8
  %14 = getelementptr inbounds %struct.kvmppc_vcpu_44x, %struct.kvmppc_vcpu_44x* %13, i32 0, i32 0
  %15 = load %struct.kvmppc_44x_tlbe*, %struct.kvmppc_44x_tlbe** %14, align 8
  %16 = load i32, i32* %4, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.kvmppc_44x_tlbe, %struct.kvmppc_44x_tlbe* %15, i64 %17
  store %struct.kvmppc_44x_tlbe* %18, %struct.kvmppc_44x_tlbe** %5, align 8
  %19 = load %struct.kvmppc_44x_tlbe*, %struct.kvmppc_44x_tlbe** %5, align 8
  %20 = call i64 @get_tlb_v(%struct.kvmppc_44x_tlbe* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %30

22:                                               ; preds = %12
  %23 = load %struct.kvmppc_44x_tlbe*, %struct.kvmppc_44x_tlbe** %5, align 8
  %24 = call i64 @get_tlb_ts(%struct.kvmppc_44x_tlbe* %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %22
  %27 = load i32, i32* %4, align 4
  %28 = load %struct.kvmppc_44x_tlbe*, %struct.kvmppc_44x_tlbe** %5, align 8
  %29 = call i32 @kvmppc_44x_tlbwe(i32 %27, %struct.kvmppc_44x_tlbe* %28)
  br label %30

30:                                               ; preds = %26, %22, %12
  br label %31

31:                                               ; preds = %30
  %32 = load i32, i32* %4, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %4, align 4
  br label %8

34:                                               ; preds = %8
  ret void
}

declare dso_local %struct.kvmppc_vcpu_44x* @to_44x(%struct.kvm_vcpu*) #1

declare dso_local i64 @get_tlb_v(%struct.kvmppc_44x_tlbe*) #1

declare dso_local i64 @get_tlb_ts(%struct.kvmppc_44x_tlbe*) #1

declare dso_local i32 @kvmppc_44x_tlbwe(i32, %struct.kvmppc_44x_tlbe*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
